# erp-data-ingestion

./: .env.example  .gitignore  README.md  memory.md  pyproject.toml  requirements.txt
apps/django_api/: manage.py
docs/: 0001-prd-draft.md  0001-prd.md  0002-phase1-midlayer-csv-contract.md  0002-phase1-midlayer-db-contract.md  0003-phase2-3-midlayer-agent.md  0004-mira-telegram-ux-mvp.md  0005-phase4-5-observability-validation.md  phase-4-storage-monitoring-plan.md
docs/discussion/: initial-discussion.md  jerry-discussion-midlayer-openclaw.md
docs/sources/: invoiced-data-format.md
docs/specs/: 2026-04-18-documentation-process-rules-design.md  2026-04-18-phase2-exploration-chatbot.md
midlayer-schema-guide/: midlayer-csv-spec.md  midlayer-db-spec.md  midlayer-schema-guide.md
midlayer-schema-guide/midlayer/: __init__.py
mira/: README.md
mira/agent/: __init__.py
mira/framework/: __init__.py  connector_interface.py  csv_writer.py  mapping_engine.py  mid_db_loader.py  midlayer_models.py  scheduling.py  (+3 more)
phase2/: Makefile  README.md  phase2.prd
phase2.5/: .env.example  pyproject.toml  requirements.txt
phase2.5/handshake_mapping/: __init__.py  __main__.py  config.py  input_previews.py  llm_map.py  mapper_codegen.py  midlayer_catalog.py  models.py  phase2_loader.py
phase2.5/output/: handshake_run_mapper.py
schemas/: __init__.py
seeds/: README.md  manifest.yaml
tests/: test_adapters.py  test_dashboard_phase4.py  test_demo_dataset.py  test_demo_runner.py  test_models.py  test_phase4_demo.py  test_phase4_transform.py  test_publish.py  test_serializers.py
(+171 files in other folders)
