[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erp-mira-agent"
version = "0.1.0"
description = "Mira — LangGraph onboarding agent for ERP mid-layer ingestion (Phase 2–3)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "python-telegram-bot>=21.6",
  "langgraph>=0.2.50",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "pyjwt>=2.8",
  "jsonschema>=4.20",
]

[project.optional-dependencies]
supabase = ["supabase>=2.10", "psycopg[binary]>=3.2"]
dashboard = ["fastapi>=0.115", "uvicorn>=0.30"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
mira = "agent.runtime.cli:main"

[tool.setuptools.packages.find]
where = ["mira"]
include = ["agent*", "framework*", "midlayer*"]

[tool.pytest.ini_options]
testpaths = ["mira/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
